--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.6.0
 Django==4.1.7
+django-cors-headers==3.14.0
 django-environ==0.10.0
-pytz==2022.7.1
-sqlparse==0.4.3
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
+pytz==2022.7.1
+sqlparse==0.4.3
 whitenoise==6.2.0
